# bank-milestone-4

./: .dockerignore  .env  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
connector/: db.py
controller/: account_controller.py  transaction_controller.py  user_controller.py
models/: account.py  transaction.py  user.py
static/css/: style.css
templates/: index.html  login.html  register.html
templates/dashboard/: accounts.html  dashboard.html  edit_account.html  profile.html  transactions.html
